force-app/main/default/objects/Lifeline_NB_Role__c/fields/Application_Recieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Recieved_Date__c</fullName>
    <label>Application Form Completed</label>
    <type>Date</type>
</CustomField>