force-app/main/default/objects/Lifeline_NB_Role__c/fields/Assessment_Gateway_1__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Gateway_1__c</fullName>
    <label>Assessment Gateway 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>