force-app/main/default/objects/Lifeline_NB_Role__c/fields/Completed_GS_points__c.field-meta.xml
<CustomField>
    <fullName>Completed_GS_points__c</fullName>
    <label>Completed GS points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>