force-app/main/default/objects/Lifeline_NB_Role__c/fields/Completed_TCS_PD_Points__c.field-meta.xml
<CustomField>
    <fullName>Completed_TCS_PD_Points__c</fullName>
    <label>Completed TCS PD Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>