force-app/main/default/objects/Lifeline_NB_Role__c/fields/Connect_Access__c.field-meta.xml
<CustomField>
    <fullName>Connect_Access__c</fullName>
    <label>Connect Access</label>
    <type>Date</type>
</CustomField>