force-app/main/default/objects/Lifeline_NB_Role__c/fields/Course_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Fee_Status__c</fullName>
    <label>Course Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>