force-app/main/default/objects/Lifeline_NB_Role__c/fields/E_Learning_Certificate_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>E_Learning_Certificate_Completion_Date__c</fullName>
    <label>E-Learning Certificate Completion Date</label>
    <type>Date</type>
</CustomField>