force-app/main/default/objects/Lifeline_NB_Role__c/fields/Invitation_to_Phase_1_Letter__c.field-meta.xml
<CustomField>
    <fullName>Invitation_to_Phase_1_Letter__c</fullName>
    <label>Invitation to Phase 1 Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>