force-app/main/default/objects/Lifeline_NB_Role__c/fields/Letter_of_Offer_Signed_by_Student__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Offer_Signed_by_Student__c</fullName>
    <label>Letter of Offer Signed by Student</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>