force-app/main/default/objects/Lifeline_NB_Role__c/fields/Role_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Role_Type_del__c</fullName>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
                <default>true</default>
                <label>Former</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>