force-app/main/default/objects/Lifeline_NB_Role__c/fields/Student_Database_Registration_Jobready__c.field-meta.xml
<CustomField>
    <fullName>Student_Database_Registration_Jobready__c</fullName>
    <label>Student Database Registration (Jobready)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>