force-app/main/default/objects/Lifeline_NB_Role__c/fields/USI_Verified__c.field-meta.xml
<CustomField>
    <fullName>USI_Verified__c</fullName>
    <label>USI Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>