force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/CVS.recordType-meta.xml
<RecordType>
    <fullName>CVS</fullName>
    <active>true</active>
    <description>CVS</description>
    <label>CVS</label>
</RecordType>