force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/Staff.recordType-meta.xml
<RecordType>
    <fullName>Staff</fullName>
    <active>true</active>
    <description>A record of a paid staff member</description>
    <label>Staff</label>
</RecordType>