force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>A record of TCS Studnets</description>
    <label>Student</label>
</RecordType>