force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/TCS_Student_Phase_1.recordType-meta.xml
<RecordType>
    <fullName>TCS_Student_Phase_1</fullName>
    <active>true</active>
    <description>A record for keeping track of a contact applying to be a TCS student</description>
    <label>TCS Student Phase 1</label>
</RecordType>