force-app/main/default/objects/Lifeline_NB_Role__c/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <description>A record of additional non-counselling/TCS roles that a volunteer has fulfilled</description>
    <label>Other Volunteers</label>
</RecordType>