force-app/main/default/objects/Lifeline_NB_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Last_Name__c</columns>
    <columns>Volunteer__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>Retail_Outlet__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>