force-app/main/default/objects/Lifeline_NB_Role__c/listViews/Current.listView-meta.xml
<ListView>
    <fullName>Current</fullName>
    <columns>Last_Name__c</columns>
    <columns>Volunteer__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>Retail_Outlet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <label>Current</label>
</ListView>