force-app/main/default/objects/Lifeline_NB_Role__c/listViews/TCS_Applicant_Paid.listView-meta.xml
<ListView>
    <fullName>TCS_Applicant_Paid</fullName>
    <columns>NAME</columns>
    <columns>Course_Fee_Status__c</columns>
    <columns>Course_Fee_Paid__c</columns>
    <columns>Name_hidden__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lifeline_NB_Role__c.TCS_Applicant</value>
    </filters>
    <filters>
        <field>Course_Fee_Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>TCS Applicant Pending</label>
</ListView>