force-app/main/default/objects/Lifeline_NB_Role__c/listViews/Tcs_Students_Phase_1.listView-meta.xml
<ListView>
    <fullName>Tcs_Students_Phase_1</fullName>
    <columns>Last_Name__c</columns>
    <columns>Volunteer__c</columns>
    <columns>NAME</columns>
    <columns>Module_1_Completion_Date__c</columns>
    <columns>Module_2_Completion_Date__c</columns>
    <columns>Module_3_Completion_date__c</columns>
    <columns>Module_4_Completion_Date__c</columns>
    <columns>Module_5_Completion_Date__c</columns>
    <columns>Module_5a_Completion_Date__c</columns>
    <columns>Module_6_Completion_Date__c</columns>
    <columns>Module_7_Completion_Date__c</columns>
    <columns>Module_7a_Completion_Date__c</columns>
    <columns>Module_8_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lifeline_NB_Role__c.TCS_Student_Phase_1</value>
    </filters>
    <label>TCS Students Phase 1</label>
</ListView>